--- a/report.html
+++ b/report.html
@@ -42,6 +42,7 @@
   </style>
 </head>
 <body>
+<img class="1.png" src="qr/1.png"  alt="URL" height="300" >
   <h1>司書教諭としてどのような学校図書館を作りたいか、運営したいか</h1>
   <div class="info">
     氏名：桧山唯愛<br>
