--- a/report.html
+++ b/report.html
@@ -4,15 +4,16 @@
   <meta charset="UTF-8">
   <title>レポートタイトル</title>
   <style>
-    body {
-      font-family: "Yu Mincho", "Georgia", serif;
-      background-color: #ffffff;
-      color: #222;
-      line-height: 1.8;
-      max-width: 800px;
-      margin: 50px auto;
-      padding: 20px;
-    }
+   body {
+  background: repeating-linear-gradient(
+    45deg,
+    #f8f8f8,
+    #f8f8f8 20px,
+    #e0e0e0 20px,
+    #e0e0e0 40px
+  );
+  color: #333;
+}
 
     h1 {
       border-bottom: 2px solid #aaa;
