--- a/report.html
+++ b/report.html
@@ -52,7 +52,9 @@
   </div>
 
   <h2>はじめに</h2>
-  <p>私は学校図書館を生徒や先生のサードプレイスになることを理想としている。ただ本を読む場所、読書活動を行うだけでなく、学校全体が「ここにきたら落ち着く」「ちょっと行ってリラックスしよう」と思ってもらえるような環境づくりができるといいなと考えている。</p>
+  <p>私は学校図書館を生徒や先生のサードプレイスになることを理想としている。ただ本を読む場所、読書活動を行うだけでなく、学校全体が「ここにきたら落ち着く」「ちょっと行ってリラックスしよう」と思ってもらえるような環境づくりができるといいなと考えている。
+  参考文献では、飯能高等学校の学校図書館をサードプレイスを実践している論文である。この論文から、ここまで自由に学校図書館を運営していいのだと実感が沸いた。特に印象的であったのは、部活動と連携をし、試験の1週間前は部活をオフにし、みんなで図書館で勉強させる習慣を持たせることで試験前でなくても図書館に来るリーピーターとなることである。
+  このように学校図書館をサードプレイスにしていくために私自身考えたことを述べていく。</p>
 
   <h2>本論</h2>
   <p>学校図書館の役割として授業や探究の調べ学習支援はもちろん、ブックトークなど読書推進の活動やICTの利用、地域の方や保護者などと連携をとることを重要視したいと考えている。
@@ -60,7 +62,9 @@
 しかし、これらの運営を実践していくには司書教諭1人の力ではできないと考える。そのために、地域の図書館の司書、保護者ボランティアとの連携を強めていきたいと考える。地域ならではの物語の読み聞かせ、保護者ボランティアによるブックトークなどからさまざまなジャンルの図書に触れてもらう機会を作るなど連携を少しずつできるよう司書教諭として学校図書館の基盤を形成していく必要があると考える。</p>
 
   <h2>おわりに</h2>
-  <p>今後の課題として、児童生徒の読書離れが一つの例としてあげられることから読書習慣を中学生も高校生も身につける必要があると考える。中学生、高校生となると勉学が忙しくなり、読書の時間がもったいないという意見は少なくないと考えるため、勉強関連の図書を紹介しつつ、他のジャンルにも挑戦してもらえるようなブックトークや読書の会みたいなものを開いてこんなにも簡単に読書は始められるということを伝えていけるような司書教諭になりたいなと思っている。
-</p>
+  <p>今後の課題として、児童生徒の読書離れが一つの例としてあげられることから読書習慣を中学生も高校生も身につける必要があると考える。中学生、高校生となると勉学が忙しくなり、読書の時間がもったいないという意見は少なくないと考えるため、勉強関連の図書を紹介しつつ、他のジャンルにも挑戦してもらえるようなブックトークや読書の会みたいなものを開いてこんなにも簡単に読書は始められるということを伝えていけるような司書教諭になりたいなと思っている。</p>
+
+  <h2>参考文献</h2>
+  <p>https://drive.google.com/file/d/1tn5PF1Jk0ZRrqy8u8if6n4Z2a1KMfCWc/view?usp=drive_link</p>
 </body>
 </html>
